# python-project-52

./: .gitignore  Makefile  README.md  TODO.md  build.sh  pyproject.toml  requirements.txt  ruff.toml
task_manager/: settings.py  urls.py  views.py
task_manager/templates/: base.html  index.html  layout.html  login.html  registration.html  users.html
task_manager/templates/users/: __index__example.html  create.html  delete.html  index.html  update.html
task_manager/users/: forms.py  models.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py
